# PyArchAppl

./: .buildinfo  .gitignore  .travis.yml  INSTALL.md  MANIFEST.in  Makefile  README.md  genindex.html  getting-started.html  index.html  objects.inv  pyproject.toml  requirements-3.13.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: python-app.yml
_sources/: getting-started.rst.txt
_static/: documentation_options.js
contrib/: test_data_client.py  test_mgmt_client.py
debian/: changelog  control  copyright  rules
doc/getting-started/: pyarchappl.ipynb  pyarchappl.slides.html  settings_at_2020-11-16T20:49:13.000Z.csv
doc/source/: conf.py  getting-started.rst  index.rst
examples/: data.pkl  data1.pkl  dataviz.ipynb  daylight_saving_time.ipynb  fetch_BPM_data-Copy1.ipynb  fetch_BPM_data-Copy2.ipynb  fetch_BPM_data-Copy3.ipynb  fetch_BPM_data.ipynb  op.sh  op1.sh  pyarchappl.ipynb  pyarchappl.slides.html  settings_at_2020-11-16T20:49:06.000Z.csv  test_data_client.py  test_date.py  test_pyarchappl.ipynb  test_pyarchappl.py  test_pyarchappl_1.py  test_settings.ipynb  test_voyager.py
examples/local/: data.h5  rawdata.pb  test_with_local_docker.ipynb  work_with_h5py.ipynb  work_with_pytables.ipynb
getting-started/: pyarchappl.ipynb  pyarchappl.slides.html  settings_at_2020-11-16T20:49:13.000Z.csv
main/: __init__.py
main/client/: __init__.py
main/config/: __init__.py  default.ini  frib.ini  rea.ini
main/contrib/: __init__.py  data.py  mgmt.py
main/data/: .client.py.swo  .client.py.swp  __init__.py  client.py  utils.py
main/data/pb/: EPICSEvent_pb2.py  __init__.py  (+1 more)
main/mgmt/: __init__.py  client.py
main/scripts/: get.py  inspect.py  utils.py
main/tests/: Makefile  conftest.py  test_config.py  test_datetime.py  test_mgmt_client.py
tests/: data_from_archiver.csv  dataviz.ipynb  op.sh  test_mgmt_client.py  test_pyarchappl.ipynb  test_settings.ipynb
(+2 files in other folders)
